# janus-gstreamer-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  Vagrantfile  autogen.sh  configure.ac  janus-gstreamer-plugin.files  janus-gstreamer-plugin.includes
conf/: janus.plugin.gstreamer.jcfg
html/: gstreamertest.js  index.html
html/demo/: gstreamertest.js
html/extern_mrl/: index.html
plugins/gstreamer/: ConfigLoader.cpp  ConfigLoader.h  GlibPtr.h  GstPtr.h  JanssonPtr.h  JanusPtr.h  JsonPtr.h  LaunchMedia.cpp  LaunchMedia.h  LaunchMountPoint.cpp  LaunchMountPoint.h  Makefile.am  Media.cpp  Media.h  MountPoint.cpp  MountPoint.h  PluginConfig.h  PluginContext.cpp  PluginContext.h  PluginMain.cpp  PluginMain.h  QueueSource.cpp  QueueSource.h  Request.cpp  Request.h  RtspMedia.cpp  RtspMedia.h  RtspMountPoint.cpp  RtspMountPoint.h  RtspServer.cpp  RtspServer.h  RtspServerMedia.cpp  RtspServerMedia.h  RtspServerMediaFactory.cpp  RtspServerMediaFactory.h  RtspServerProxyMedia.cpp  RtspServerProxyMedia.h  RtspServerProxyMountPoint.cpp  RtspServerProxyMountPoint.h  Session.cpp  (+2 more)
snap/: snapcraft.yaml
snap/hooks/: install
